--- a/app/views/renalware/hd/profiles/_summary.html.slim
+++ b/app/views/renalware/hd/profiles/_summary.html.slim
@@ -11,12 +11,7 @@ fieldset
       .large-3.columns
         dl
           dt Schedule:
-          dd
-            - if @profile.schedule
-              - if @profile.schedule.other?
-                = @profile.other_schedule
-              - else
-                = @profile.schedule.text
+          dd= @profile.current_schedule
 
       .large-3.columns
         dl
