--- a/app/views/renalware/deaths/index.html.slim
+++ b/app/views/renalware/deaths/index.html.slim
@@ -20,7 +20,7 @@
             = link_to "Demographics", patient_path(patient), title: "Demographics"
             = pipe_separator
             = link_to "Edit death details", edit_patient_death_path(patient.id), title: "Edit death details"
-          td= patient.to_s(:full_name)
+          td= patient.to_s(:long)
           td= patient.nhs_number
           td= patient.local_patient_id
           td= patient.sex
