--- a/app/views/renalware/events/types/_form.html.slim
+++ b/app/views/renalware/events/types/_form.html.slim
@@ -1,1 +1,13 @@
-= f.input :name, label: "Event Type"
+.row
+  = render 'header'
+  = render partial: "renalware/shared/errors", locals: { model: @event_type }
+
+.row
+  .large-6.columns
+    = simple_form_for @event_type do |f|
+
+      = f.input :name, label: "Event Type"
+
+      = f.button :submit
+      span= " or "
+      = link_to "cancel", events_types_path
