--- a/app/views/renalware/bag_types/edit.html.slim
+++ b/app/views/renalware/bag_types/edit.html.slim
@@ -1,11 +1,1 @@
-.row
-  = render "header"
-  = render partial: "renalware/shared/errors", locals: { model: @bag_type }
-
-.row
-  = simple_form_for @bag_type do |bt|
-    = render partial: "renalware/bag_types/form", locals: { bt: bt }
-
-    = submit_tag "Update", class: "button"
-    span= " or "
-    = link_to "Cancel", bag_types_path
+= render "form"
