--- a/app/views/renalware/events/types/edit.html.slim
+++ b/app/views/renalware/events/types/edit.html.slim
@@ -1,12 +1,1 @@
-.row
-  = render "header"
-  = render partial: "renalware/shared/errors", locals: { model: @event_type }
-
-.row
-  .large-6.columns
-    = simple_form_for @event_type do |f|
-      = render partial: "renalware/events/types/form", locals: { f: f }
-
-      = submit_tag "Update", class: "button"
-      span= " or "
-      = link_to "cancel", events_types_path
+= render "form"
