--- a/app/views/renalware/events/types/new.html.slim
+++ b/app/views/renalware/events/types/new.html.slim
@@ -1,11 +1,1 @@
-.row
-  = render 'header'
-  = render partial: "renalware/shared/errors", locals: { model: @event_type }
-
-.row
-  .large-6.columns
-    = simple_form_for @event_type do |f|
-      = render partial: 'form', locals: {f: f}
-      = submit_tag "Save", class: "button"
-      span= " or "
-      = link_to "cancel", drugs_drugs_path
+= render "form"
