Fix some issues reported by the code review

--- a/app/views/renalware/admin/users/edit.html.slim
+++ b/app/views/renalware/admin/users/edit.html.slim
@@ -2,7 +2,7 @@
   = render "header"
 
 .row
-  h2= @user.to_s
+  h2= @user
 
   = simple_form_for @user, url: admin_user_path(@user) do |f|
     = f.input :approved, as: :hidden, input_html: { value: true }
