HD session form

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,7 @@
  *= require foundation-datepicker
  *= require jquery-ui/core
  *= require jquery-ui/autocomplete
+ *= require clockpicker
  *= require_tree ./lib
  *= require_tree ./renalware
  */
