--- a/app/views/renalware/hd/dashboards/show.html.slim
+++ b/app/views/renalware/hd/dashboards/show.html.slim
@@ -1,3 +1,4 @@
 = render layout: "renalware/patients/layout", locals: { title: "HD Summary" } do
   = render "renalware/hd/profiles/summary"
   = render "renalware/hd/preference_sets/summary"
+  = render "renalware/hd/dry_weights/list"
