Ongoing HD Sessions list

--- a/app/views/renalware/navigation/_renal.html.slim
+++ b/app/views/renalware/navigation/_renal.html.slim
@@ -3,3 +3,5 @@ li.has-dropdown
   ul.dropdown
     li
       = link_to "Tx Wait List", transplants_wait_list_path(filter: "active")
+    li
+      = link_to "Ongoing HD Sessions", hd_ongoing_sessions_list_path
