--- a/app/views/renalware/accesses/accesses/_list.html.slim
+++ b/app/views/renalware/accesses/accesses/_list.html.slim
@@ -13,6 +13,7 @@ fieldset.hd-accesses
     table.auto-layout
       thead
         th
+        th Formed On
         th Start Date
         th End Date
         th Type
@@ -28,6 +29,7 @@ fieldset.hd-accesses
               = link_to "View", patient_accesses_access_path(@patient, access)
               = pipe_separator
               = link_to "Edit", edit_patient_accesses_access_path(@patient, access)
+            td= access.formed_on
             td= access.started_on
             td= access.terminated_on
             td= access.type
