--- a/app/views/renalware/accesses/dashboards/show.html.slim
+++ b/app/views/renalware/accesses/dashboards/show.html.slim
@@ -1,4 +1,4 @@
-= render layout: "renalware/patients/layout", locals: { title: "Access Summary" } do
+= render layout: "renalware/patients/layout", locals: { title: "Access Plan" } do
   .document
     = render "renalware/accesses/accesses/current_access"
     = render "renalware/accesses/accesses/list"
