--- a/app/views/renalware/accesses/accesses/_current_access.html.slim
+++ b/app/views/renalware/accesses/accesses/_current_access.html.slim
@@ -44,7 +44,7 @@ fieldset
     .large-3.columns
       dl
         dt Plan:
-        dd= @current_access.plan
+        dd= @current_access.plan_decision
 
     .large-5.columns
       dl
