--- a/app/views/renalware/accesses/accesses/show.html.slim
+++ b/app/views/renalware/accesses/accesses/show.html.slim
@@ -7,7 +7,7 @@
   .document-view
     = render "renalware/shared/attributes_group",
         legend: "Access Details", destination: "details",
-        models: { @access => [:formed_on, :started_on, :terminated_on, :planned_on, :decided_by, :type, :site, :side, :plan, :notes] }
+        models: { @access => [:formed_on, :started_on, :terminated_on, :type, :site, :side, :plan, :planned_on, :decided_by, :notes] }
 
   fieldset
     legend Procedures
