--- a/app/views/renalware/accesses/profiles/show.html.slim
+++ b/app/views/renalware/accesses/profiles/show.html.slim
@@ -1,10 +1,18 @@
 = render layout: "renalware/patients/layout",
-    locals: { title: "Access" } do
+    locals: { title: "Access Profile" } do
   - return unless @profile
 
   = render "profile_nav"
 
   .document-view
     = render "renalware/shared/attributes_group",
-        legend: "Access Profile", destination: "details",
-        models: { @profile => [:formed_on, :started_on, :terminated_on, :type, :site, :side, :plan, :planned_on, :decided_by, :notes] }
+        legend: "Access Profile", destination: "profile",
+        models: { @profile => [:type, :site, :side, :formed_on, :started_on, :terminated_on] }
+
+    = render "renalware/shared/attributes_group",
+        legend: "Access Plan", destination: "plan",
+        models: { @profile => [:plan, :planned_on, :decided_by] }
+
+    = render "renalware/shared/attributes_group",
+        legend: "Admin", destination: "notes",
+        models: { @profile => [:updated_by, :updated_at, :notes] }
