Access procedure module

--- a/app/views/renalware/accesses/dashboards/show.html.slim
+++ b/app/views/renalware/accesses/dashboards/show.html.slim
@@ -2,3 +2,4 @@
   .document
     = render "renalware/accesses/profiles/current_profile"
     = render "renalware/accesses/profiles/list"
+    = render "renalware/accesses/procedures/list"
