Access assessments web pages

--- a/app/views/renalware/accesses/dashboards/show.html.slim
+++ b/app/views/renalware/accesses/dashboards/show.html.slim
@@ -3,3 +3,4 @@
     = render "renalware/accesses/profiles/current_profile"
     = render "renalware/accesses/profiles/list"
     = render "renalware/accesses/procedures/list"
+    = render "renalware/accesses/assessments/list"
