--- a/app/views/renalware/accesses/assessments/show.html.slim
+++ b/app/views/renalware/accesses/assessments/show.html.slim
@@ -6,9 +6,9 @@
 
   .document-view
     = render "renalware/shared/attributes_group",
-        legend: "Test", destination: "test",
+        legend: "Results & Observations", destination: "results",
         models: { @assessment => [:performed_on, :type, :site, :side], @assessment.document.test => @assessment.document.test.class.attributes_list }
 
     = render "renalware/shared/attributes_group",
-        legend: "Admin", destination: "admin",
+        legend: "Management Plans", destination: "plans",
         models: { @assessment.document.admin => @assessment.document.admin.class.attributes_list, @assessment => [:comments, :updated_by, :updated_at] }
