--- a/app/views/renalware/accesses/procedures/_list.html.slim
+++ b/app/views/renalware/accesses/procedures/_list.html.slim
@@ -10,7 +10,7 @@ fieldset.access-procedures
     table.auto-layout
       thead
         th
-        th Performed On
+        th Performed
         th Type
         th Site
         th Side
