Utilize existing actions

--- a/app/views/renalware/medications/form.js.erb
+++ b/app/views/renalware/medications/form.js.erb
@@ -1,7 +1,8 @@
 $("#medications").html("<%= escape_javascript(
   render "form", medication: @medication,
-    patient: @patient,
-    treatable: @treatable,
-    url: patient_medications_path(@patient, @treatable)
+                 patient: @patient,
+                 treatable: @treatable,
+                 url: url
 ) %>");
+
 initDatepickersIn("#medications");
