--- a/app/views/renalware/medications/form_error.js.erb
+++ b/app/views/renalware/medications/form_error.js.erb
@@ -1,6 +1,6 @@
 $(".medication-form").replaceWith("<%= escape_javascript(
   render "form", medication: @medication,
-    patient: @patient,
-    treatable: @treatable,
-    url: patient_medications_path(@patient, @treatable)
+                 patient: @patient,
+                 treatable: @treatable,
+                 url: url
 ) %>");
