Pass `query` explicitly to the table
In preparation for conditional query/sorting depending on where medications are used

--- a/app/views/renalware/medications/_index.html.slim
+++ b/app/views/renalware/medications/_index.html.slim
@@ -1,5 +1,6 @@
 #medications
   = render "renalware/medications/table",
+      query: @q,
       patient: patient,
       treatable: treatable,
       medications: medications
