--- a/app/views/renalware/medications/index.html.slim
+++ b/app/views/renalware/medications/index.html.slim
@@ -1,5 +1,6 @@
 = render layout: "renalware/patients/layout", locals: { title: "Medications" } do
   = render "index",
+      query: @q,
       patient: @patient,
       treatable: @patient,
       medications: @medications
