Use explicit locals for render for form
comply with style guide

--- a/app/views/renalware/medications/form.js.erb
+++ b/app/views/renalware/medications/form.js.erb
@@ -1,7 +1,7 @@
 $("#medications").html("<%= escape_javascript(
-  render "form", medication: @medication,
-                 patient: @patient,
-                 treatable: @treatable,
+  render "form", medication: medication,
+                 patient: patient,
+                 treatable: treatable,
                  url: url
 ) %>");
 
