Adds conditional sorting based on context
can only sort when displayed for the patient (i.e. not exit site infections)

--- a/app/views/renalware/medications/_form.html.slim
+++ b/app/views/renalware/medications/_form.html.slim
@@ -11,6 +11,7 @@ ruby:
   .med-form.content id=("edit-meds-#{f.object.id}" )
     = render "renalware/medications/drug_select/#{drug_select_partials[f.object.treatable_type]}_fields", f: f
 
+    = hidden_field_tag :treatable_type, treatable.class.name
     = f.input :dose
     = f.association :medication_route, collection: Renalware::MedicationRoute.all,
         label_method: :name,
