Use local assigns to simplify signature
The JS view/template is just delegating to a partial anyway

--- a/app/views/renalware/medications/index.js.erb
+++ b/app/views/renalware/medications/index.js.erb
@@ -1,3 +1,1 @@
-$("#medications").html("<%= escape_javascript(
-  render "table", query: query, patient: patient, treatable: treatable, medications: medications
-) %>");
+$("#medications").html("<%= escape_javascript(render "table", local_assigns) %>");
