--- a/app/views/renalware/medications/form.js.erb
+++ b/app/views/renalware/medications/form.js.erb
@@ -1,8 +1,3 @@
-$("#medications").html("<%= escape_javascript(
-  render "form", medication: medication,
-                 patient: patient,
-                 treatable: treatable,
-                 url: url
-) %>");
+$("#medications").html("<%= escape_javascript(render "form", local_assigns) %>");
 
 initDatepickersIn("#medications");
