Ensure same ordering for medications

--- a/app/views/renalware/exit_site_infections/show.html.slim
+++ b/app/views/renalware/exit_site_infections/show.html.slim
@@ -13,4 +13,4 @@
     = render "renalware/medications/index",
         patient: @patient,
         treatable: @exit_site_infection,
-        medications: @exit_site_infection.medications
+        medications: @exit_site_infection.medications.ordered
