--- a/app/views/renalware/medications/_index.html.slim
+++ b/app/views/renalware/medications/_index.html.slim
@@ -4,3 +4,4 @@
       patient: patient,
       treatable: treatable,
       medications: medications
+  = render "renalware/medications/table", local_assigns
