--- a/app/views/renalware/peritonitis_episodes/show.html.slim
+++ b/app/views/renalware/peritonitis_episodes/show.html.slim
@@ -13,4 +13,4 @@
     = render "renalware/medications/index",
         patient: @patient,
         treatable: @peritonitis_episode,
-        medications: @peritonitis_episode.medications
+        medications: @peritonitis_episode.medications.ordered
