Just pass on locals to table

--- a/app/views/renalware/exit_site_infections/show.html.slim
+++ b/app/views/renalware/exit_site_infections/show.html.slim
@@ -11,6 +11,7 @@
 
   = field_set_tag "Antibiotics/Routes" do
     = render "renalware/medications/index",
+        query: nil,
         patient: @patient,
         treatable: @exit_site_infection,
         medications: @exit_site_infection.medications.ordered
