Add helper to codify approach to handling AJAX requests

--- a/app/views/renalware/medications/index.js.erb
+++ b/app/views/renalware/medications/index.js.erb
@@ -1,1 +1,1 @@
-$("#medications").html("<%= escape_javascript(render "table", local_assigns) %>");
+<%= refresh("#medications", partial: "table", locals: local_assigns) %>
