--- a/app/views/renalware/medications/form.js.erb
+++ b/app/views/renalware/medications/form.js.erb
@@ -1,3 +1,3 @@
-$("#medications").html("<%= escape_javascript(render "form", local_assigns) %>");
+<%= refresh("#medications", partial: "form", locals: local_assigns) %>
 
 initDatepickersIn("#medications");
