Remove unnecessary CSS

--- a/app/views/renalware/medications/_table.html.slim
+++ b/app/views/renalware/medications/_table.html.slim
@@ -17,7 +17,7 @@ table.auto-layout
           = pipe_separator
           = link_to "Terminate", patient_medication_path(patient, medication), method: :delete,
               remote: true, data: { confirm: "Are you sure?" }
-        td.name= medication.drug.name
+        td= medication.drug.name
         td= medication.drug.drug_types.map(&:name).join(", ")
         td= medication.dose
         td= medication.frequency
