Use prefered I18n scope syntax

--- a/app/views/renalware/medications/_table.html.slim
+++ b/app/views/renalware/medications/_table.html.slim
@@ -22,7 +22,7 @@ table.auto-layout
         td= medication.dose
         td= medication.frequency
         td= medication.medication_route.name == 'Route: Other (Please specify in notes)' ? medication.medication_route.full_name : medication.medication_route.name
-        td= I18n.t("enums.provider.#{medication.provider}")
+        td= I18n.t(medication.provider, scope: "enums.provider")
         td= medication.start_date
 
 .right
