Decorate medications in other contexts

--- a/app/views/renalware/exit_site_infections/show.html.slim
+++ b/app/views/renalware/exit_site_infections/show.html.slim
@@ -14,4 +14,4 @@
         query: nil,
         patient: @patient,
         treatable: @exit_site_infection,
-        medications: @exit_site_infection.medications.ordered
+        medications: @medications
