--- a/app/views/renalware/peritonitis_episodes/show.html.slim
+++ b/app/views/renalware/peritonitis_episodes/show.html.slim
@@ -14,4 +14,4 @@
         query: nil,
         patient: @patient,
         treatable: @peritonitis_episode,
-        medications: @peritonitis_episode.medications.ordered
+        medications: @medications
