--- a/app/views/renalware/hd/dashboards/show.html.slim
+++ b/app/views/renalware/hd/dashboards/show.html.slim
@@ -1,5 +1,5 @@
 = render layout: "renalware/patients/layout", locals: { title: "HD Summary" } do
-  = render "renalware/hd/profiles/summary"
-  = render "renalware/hd/preference_sets/summary"
-  = render "renalware/hd/sessions/list"
-  = render "renalware/hd/dry_weights/list"
+  = render "renalware/hd/profiles/summary", local_assigns
+  = render "renalware/hd/preference_sets/summary", local_assigns
+  = render "renalware/hd/sessions/list", local_assigns
+  = render "renalware/hd/dry_weights/list", local_assigns
