--- a/app/views/renalware/hd/dry_weights/_list.html.slim
+++ b/app/views/renalware/hd/dry_weights/_list.html.slim
@@ -1,7 +1,7 @@
 fieldset.hd-dry_weights
   legend Latest Dry Weights
 
-  - if @dry_weights.empty?
+  - if dry_weights.empty?
     .call-to-action
       = link_to new_patient_hd_dry_weight_path(@patient) do
         i.fa.fa-plus-circle
@@ -15,7 +15,7 @@ fieldset.hd-dry_weights
         th Assessor
 
       tbody
-        - @dry_weights.each do |dry_weight|
+        - dry_weights.each do |dry_weight|
           tr
             td= link_to "Edit", edit_patient_hd_dry_weight_path(@patient, dry_weight)
             td= dry_weight.assessed_on
