Extract sortable condition into presenter

--- a/app/views/renalware/exit_site_infections/show.html.slim
+++ b/app/views/renalware/exit_site_infections/show.html.slim
@@ -13,5 +13,5 @@
     = render "renalware/medications/index",
         query: nil,
         patient: @patient,
-        treatable: @exit_site_infection,
+        treatable: @treatable,
         medications: @medications
