--- a/app/views/renalware/peritonitis_episodes/show.html.slim
+++ b/app/views/renalware/peritonitis_episodes/show.html.slim
@@ -13,5 +13,5 @@
     = render "renalware/medications/index",
         query: nil,
         patient: @patient,
-        treatable: @peritonitis_episode,
+        treatable: @treatable,
         medications: @medications
