--- a/app/views/renalware/medications/_form.html.slim
+++ b/app/views/renalware/medications/_form.html.slim
@@ -18,7 +18,7 @@ ruby:
         prompt: "Please select route of administration",
         html_input: { class: "medication-route-select" },
         label: "Route"
-    = f.input :route_description, label: "Route Description", hint: "(required only if above is \"Other\")"
+    = f.input :route_description, label: "Route Description"
     = f.input :frequency, label: "Frequency & Duration"
     = f.input :notes
     = f.input :start_date, as: :date_picker, label: "Prescribed on"
