--- a/app/views/renalware/medications/_form.html.slim
+++ b/app/views/renalware/medications/_form.html.slim
@@ -14,9 +14,7 @@ ruby:
     = hidden_field_tag :treatable_type, treatable.class.name
     = f.input :dose
     = f.association :medication_route, collection: medication_routes,
-        label_method: :code,
-        prompt: "Please select route of administration",
-        label: "Route"
+        label_method: :code, prompt: :translate
     = f.input :route_description, label: "Route Description"
     = f.input :frequency, label: "Frequency & Duration"
     = f.input :notes
